@@ -1,14 +1,7 @@
 package com.example.service_registry.config;
 
-import com.example.service_registry.dto.AuthenticationResponse;
-import com.example.service_registry.dto.LoginRequest;
-import com.example.service_registry.utils.Jwt;
-import com.example.service_registry.utils.UserManagementClient;
-import io.jsonwebtoken.Claims;
 import java.util.List;
-import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.AuthenticationServiceException;
 import org.springframework.security.authentication.BadCredentialsException;
@@ -21,75 +14,69 @@ import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
+import com.example.service_registry.dto.AuthenticationResponse;
+import com.example.service_registry.dto.LoginRequest;
+import com.example.service_registry.utils.Jwt;
+import com.example.service_registry.utils.UserManagementClient;
+
+import io.jsonwebtoken.Claims;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
 @Component
 @RequiredArgsConstructor
 @Slf4j
 public class CustomAuthenticationProvider implements AuthenticationProvider {
 
-  private final UserManagementClient userManagementClient;
-  private final Jwt jwt;
+	private final UserManagementClient userManagementClient;
+	private final Jwt jwt;
 
-  @Override
-  public Authentication authenticate(Authentication authentication)
-    throws AuthenticationException {
-    String username = authentication.getName();
-    String password = authentication.getCredentials().toString();
-    LoginRequest loginRequest = new LoginRequest(username, password);
-    AuthenticationResponse jwtResponse;
+	@Override
+	public Authentication authenticate(Authentication authentication) throws AuthenticationException {
+		String username = authentication.getName();
+		String password = authentication.getCredentials().toString();
+		LoginRequest loginRequest = new LoginRequest(username, password);
+		AuthenticationResponse jwtResponse;
 
-    try {
-      jwtResponse = userManagementClient.login(loginRequest);
-    } catch (Exception e) {
-      throw new AuthenticationServiceException(
-        "Error during authentication: " + e.getMessage(),
-        e
-      );
-    }
+		try {
+			jwtResponse = userManagementClient.login(loginRequest);
+		} catch (Exception e) {
+			throw new AuthenticationServiceException("Error during authentication: " + e.getMessage(), e);
+		}
 
-    if (jwtResponse == null) {
-      throw new AuthenticationServiceException(
-        "Authentication response is null"
-      );
-    }
+		if (jwtResponse == null) {
+			throw new AuthenticationServiceException("Authentication response is null");
+		}
 
-    String accessToken = jwtResponse.getAccessToken();
-    log.info("{} [{} jwtToken:---------------------------------]", accessToken);
+		String accessToken = jwtResponse.getAccessToken();
+		log.info("{} [{} jwtToken:---------------------------------]", accessToken);
 
-    if (accessToken != null) {
-      Claims claims = jwt.validToken(accessToken);
+		if (accessToken != null) {
+			Claims claims = jwt.validToken(accessToken);
 
-      // Extract authorities from the JWT claims, assuming they are stored as a list of strings
-      // List<String> authoritiesClaim = claims.get("authorities", List.class);
-      List<?> rawAuthoritiesClaim = claims.get("authorities", List.class);
+			// Extract authorities from the JWT claims, assuming they are stored as a list
+			// of strings
+			List<?> rawAuthoritiesClaim = claims.get("authorities", List.class);
 
-      if (rawAuthoritiesClaim != null) {
-        List<String> authoritiesClaim = rawAuthoritiesClaim
-          .stream()
-          .map(Object::toString)
-          .collect(Collectors.toList());
+			if (rawAuthoritiesClaim != null) {
+				List<String> authoritiesClaim = rawAuthoritiesClaim.stream().map(Object::toString).toList();
 
-        List<GrantedAuthority> authorities = authoritiesClaim
-          .stream()
-          .map(SimpleGrantedAuthority::new)
-          .collect(Collectors.toList());
+				List<GrantedAuthority> authorities = authoritiesClaim.stream().map(SimpleGrantedAuthority::new)
+						.map(GrantedAuthority.class::cast) // Explicitly cast to GrantedAuthority
+						.toList();
 
-        UserDetails userDetails = new User(username, password, authorities);
-        return new UsernamePasswordAuthenticationToken(
-          userDetails,
-          password,
-          authorities
-        );
-      } else {
-        throw new BadCredentialsException("Authentication failed");
-      }
-    }
-    return authentication;
-  }
+				UserDetails userDetails = new User(username, password, authorities);
+				return new UsernamePasswordAuthenticationToken(userDetails, password, authorities);
+			} else {
+				throw new BadCredentialsException("Authentication failed");
+			}
+		}
 
-  @Override
-  public boolean supports(Class<?> authentication) {
-    return UsernamePasswordAuthenticationToken.class.isAssignableFrom(
-        authentication
-      );
-  }
+		return authentication;
+	}
+
+	@Override
+	public boolean supports(Class<?> authentication) {
+		return UsernamePasswordAuthenticationToken.class.isAssignableFrom(authentication);
+	}
 }
